# sphere360-doc-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml  test_pipeline.py
config/: settings.py  urls.py
documents/: pipeline.py
documents/api/: urls.py  views.py
documents/llm/: __init__.py  processor.py  schema.py
documents/loaders/: __init__.py  base.py  image_loader.py  pdf_loader.py  text_loader.py  word_loader.py
documents/tests/: test_pipeline.py
samples/docfiles/: employment_contract.docx  invoice.docx  lease_agreement.docx  medical_summary.docx  nda_agreement.docx  permit_application.docx  project_proposal.docx  service_agreement.docx  training_certificate.docx  warranty_document.docx
samples/txtfiles/: domain_registration.txt  employee_badge.txt  event_ticket.txt  gym_membership.txt  library_card.txt  ssl_certificate.txt  subscription_email.txt  trial_license.txt  vehicle_registration.txt
